--- a/app/src/main/res/layout/activity_orders.xml
+++ b/app/src/main/res/layout/activity_orders.xml
@@ -18,12 +18,22 @@
         app:srcCompat="@android:drawable/ic_input_add"
         app:fabSize="normal" />
 
+    <TextView
+        android:gravity="center_horizontal"
+        android:text="Order History"
+        android:textSize="24sp"
+        android:textColor="@color/yellow"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+
     <ListView
         android:id="@+id/OrdersListView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="3dp"
+        android:layout_height="wrap_content"
+        android:padding="2dp"
         android:scrollbars="vertical"
+        android:layout_marginTop="20dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
